--- a/play-services-core/microg-ui-tools/src/main/res/layout/self_check_entry.xml
+++ b/play-services-core/microg-ui-tools/src/main/res/layout/self_check_entry.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2013-2017 microG Project Team
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,16 +15,15 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="?attr/selectableItemBackground"
-              android:gravity="center_vertical"
-              android:orientation="horizontal"
-              android:paddingBottom="5dp"
-              android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-              android:paddingLeft="?attr/listPreferredItemPaddingLeft"
-              android:paddingRight="?attr/listPreferredItemPaddingRight"
-              android:paddingStart="?android:attr/listPreferredItemPaddingStart">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:gravity="center_vertical"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+    android:paddingRight="?attr/listPreferredItemPaddingRight"
+    android:paddingBottom="5dp">
 
     <LinearLayout
         android:layout_width="0dip"
@@ -38,14 +36,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:textColor="?android:textColorPrimary"/>
+            android:textColor="?android:textColorPrimary" />
 
         <TextView
             android:id="@+id/self_check_resolution"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="?android:textColorSecondary"/>
+            android:textColor="?android:textColorSecondary" />
     </LinearLayout>
 
     <CheckBox
@@ -54,5 +52,5 @@
         android:layout_height="wrap_content"
         android:focusable="false"
         android:gravity="right|center_vertical"
-        android:paddingTop="5dp"/>
+        android:paddingTop="5dp" />
 </LinearLayout>
