--- a/play-services-core/src/main/res/navigation/nav_settings.xml
+++ b/play-services-core/src/main/res/navigation/nav_settings.xml
@@ -17,21 +17,21 @@
         <action
             android:id="@+id/openCheckinSettings"
             app:destination="@id/checkinFragment" />
-        <action
-            android:id="@+id/openGcmSettings"
-            app:destination="@id/gcmFragment" />
-        <action
-            android:id="@+id/openSafetyNetSettings"
-            app:destination="@id/safetyNetFragment" />
-        <action
-            android:id="@+id/openMoreGoogleSettings"
-            app:destination="@id/googleMoreFragment" />
-        <action
-            android:id="@+id/openExposureNotificationSettings"
-            app:destination="@id/nav_nearby" />
-        <action
-            android:id="@+id/openLocationSettings"
-            app:destination="@id/nav_location" />
+<!--        <action-->
+<!--            android:id="@+id/openGcmSettings"-->
+<!--            app:destination="@id/gcmFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openSafetyNetSettings"-->
+<!--            app:destination="@id/safetyNetFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openMoreGoogleSettings"-->
+<!--            app:destination="@id/googleMoreFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openExposureNotificationSettings"-->
+<!--            app:destination="@id/nav_nearby" />-->
+<!--        <action-->
+<!--            android:id="@+id/openLocationSettings"-->
+<!--            app:destination="@id/nav_location" />-->
         <action
             android:id="@+id/openAbout"
             app:destination="@id/aboutFragment" />
@@ -54,95 +54,95 @@
 
     <!-- Push Notifications -->
 
-    <fragment
-        android:id="@+id/gcmFragment"
-        android:name="org.microg.gms.ui.PushNotificationFragment"
-        android:label="@string/service_name_mcs"
-        tools:layout="@layout/push_notification_fragment">
-        <action
-            android:id="@+id/openGcmAppDetails"
-            app:destination="@id/gcmAppFragment" />
-        <action
-            android:id="@+id/openAllGcmApps"
-            app:destination="@id/gcmAllAppsFragment" />
-        <action
-            android:id="@+id/openGcmAdvancedSettings"
-            app:destination="@id/gcmAdvancedFragment" />
-    </fragment>
+<!--    <fragment-->
+<!--        android:id="@+id/gcmFragment"-->
+<!--        android:name="org.microg.gms.ui.PushNotificationFragment"-->
+<!--        android:label="@string/service_name_mcs"-->
+<!--        tools:layout="@layout/push_notification_fragment">-->
+<!--        <action-->
+<!--            android:id="@+id/openGcmAppDetails"-->
+<!--            app:destination="@id/gcmAppFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openAllGcmApps"-->
+<!--            app:destination="@id/gcmAllAppsFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openGcmAdvancedSettings"-->
+<!--            app:destination="@id/gcmAdvancedFragment" />-->
+<!--    </fragment>-->
 
-    <fragment
-        android:id="@+id/gcmAllAppsFragment"
-        android:name="org.microg.gms.ui.PushNotificationAllAppsFragment"
-        android:label="@string/prefcat_push_apps_title">
-        <action
-            android:id="@+id/openGcmAppDetailsFromAll"
-            app:destination="@id/gcmAppFragment" />
-    </fragment>
+<!--    <fragment-->
+<!--        android:id="@+id/gcmAllAppsFragment"-->
+<!--        android:name="org.microg.gms.ui.PushNotificationAllAppsFragment"-->
+<!--        android:label="@string/prefcat_push_apps_title">-->
+<!--        <action-->
+<!--            android:id="@+id/openGcmAppDetailsFromAll"-->
+<!--            app:destination="@id/gcmAppFragment" />-->
+<!--    </fragment>-->
 
-    <fragment
-        android:id="@+id/gcmAppFragment"
-        android:name="org.microg.gms.ui.PushNotificationAppFragment"
-        android:label="@string/service_name_mcs"
-        tools:layout="@layout/push_notification_app_fragment">
-        <argument
-            android:name="package"
-            app:argType="string" />
-    </fragment>
+<!--    <fragment-->
+<!--        android:id="@+id/gcmAppFragment"-->
+<!--        android:name="org.microg.gms.ui.PushNotificationAppFragment"-->
+<!--        android:label="@string/service_name_mcs"-->
+<!--        tools:layout="@layout/push_notification_app_fragment">-->
+<!--        <argument-->
+<!--            android:name="package"-->
+<!--            app:argType="string" />-->
+<!--    </fragment>-->
 
-    <fragment
-        android:id="@+id/gcmAdvancedFragment"
-        android:name="org.microg.gms.ui.PushNotificationAdvancedFragment"
-        android:label="@string/service_name_mcs" />
+<!--    <fragment-->
+<!--        android:id="@+id/gcmAdvancedFragment"-->
+<!--        android:name="org.microg.gms.ui.PushNotificationAdvancedFragment"-->
+<!--        android:label="@string/service_name_mcs" />-->
 
     <!-- Device Attestation -->
 
-    <fragment
-        android:id="@+id/safetyNetFragment"
-        android:name="org.microg.gms.ui.SafetyNetFragment"
-        android:label="@string/service_name_snet"
-        tools:layout="@layout/safety_net_fragment">
-        <action
-            android:id="@+id/openSafetyNetAppDetails"
-            app:destination="@id/safetyNetAppFragment" />
-        <action
-            android:id="@+id/openAllSafetyNetApps"
-            app:destination="@id/safetyNetAllAppsFragment" />
-        <action
-            android:id="@+id/openSafetyNetAdvancedSettings"
-            app:destination="@id/safetyNetAdvancedFragment" />
-    </fragment>
+<!--    <fragment-->
+<!--        android:id="@+id/safetyNetFragment"-->
+<!--        android:name="org.microg.gms.ui.SafetyNetFragment"-->
+<!--        android:label="@string/service_name_snet"-->
+<!--        tools:layout="@layout/safety_net_fragment">-->
+<!--        <action-->
+<!--            android:id="@+id/openSafetyNetAppDetails"-->
+<!--            app:destination="@id/safetyNetAppFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openAllSafetyNetApps"-->
+<!--            app:destination="@id/safetyNetAllAppsFragment" />-->
+<!--        <action-->
+<!--            android:id="@+id/openSafetyNetAdvancedSettings"-->
+<!--            app:destination="@id/safetyNetAdvancedFragment" />-->
+<!--    </fragment>-->
 
-    <fragment
-        android:id="@+id/safetyNetAdvancedFragment"
-        android:name="org.microg.gms.ui.SafetyNetAdvancedFragment"
-        android:label="@string/service_name_snet"
-        tools:layout="@layout/safety_net_advanced_fragment" />
+<!--    <fragment-->
+<!--        android:id="@+id/safetyNetAdvancedFragment"-->
+<!--        android:name="org.microg.gms.ui.SafetyNetAdvancedFragment"-->
+<!--        android:label="@string/service_name_snet"-->
+<!--        tools:layout="@layout/safety_net_advanced_fragment" />-->
 
-    <fragment
-        android:id="@+id/safetyNetAllAppsFragment"
-        android:name="org.microg.gms.ui.SafetyNetAllAppsFragment"
-        android:label="@string/prefcat_safetynet_apps_title">
-        <action
-            android:id="@+id/openSafetyNetAppDetailsFromAll"
-            app:destination="@id/safetyNetAppFragment" />
-    </fragment>
+<!--    <fragment-->
+<!--        android:id="@+id/safetyNetAllAppsFragment"-->
+<!--        android:name="org.microg.gms.ui.SafetyNetAllAppsFragment"-->
+<!--        android:label="@string/prefcat_safetynet_apps_title">-->
+<!--        <action-->
+<!--            android:id="@+id/openSafetyNetAppDetailsFromAll"-->
+<!--            app:destination="@id/safetyNetAppFragment" />-->
+<!--    </fragment>-->
 
-    <fragment
-        android:id="@+id/safetyNetAppFragment"
-        android:name="org.microg.gms.ui.SafetyNetAppFragment"
-        android:label="@string/service_name_snet"
-        tools:layout="@layout/safety_net_app_fragment">
-        <argument
-            android:name="package"
-            app:argType="string" />
-    </fragment>
+<!--    <fragment-->
+<!--        android:id="@+id/safetyNetAppFragment"-->
+<!--        android:name="org.microg.gms.ui.SafetyNetAppFragment"-->
+<!--        android:label="@string/service_name_snet"-->
+<!--        tools:layout="@layout/safety_net_app_fragment">-->
+<!--        <argument-->
+<!--            android:name="package"-->
+<!--            app:argType="string" />-->
+<!--    </fragment>-->
 
     <!-- More -->
 
-    <fragment
-        android:id="@+id/googleMoreFragment"
-        android:name="org.microg.gms.ui.GoogleMoreFragment"
-        android:label="@string/gms_settings_name" />
+<!--    <fragment-->
+<!--        android:id="@+id/googleMoreFragment"-->
+<!--        android:name="org.microg.gms.ui.GoogleMoreFragment"-->
+<!--        android:label="@string/gms_settings_name" />-->
 
     <!-- About -->
 
@@ -154,6 +154,6 @@
 
     <!-- Included -->
 
-    <include app:graph="@navigation/nav_nearby" />
-    <include app:graph="@navigation/nav_location" />
+<!--    <include app:graph="@navigation/nav_nearby" />-->
+<!--    <include app:graph="@navigation/nav_location" />-->
 </navigation>
